# libmtwist

./: .gitignore  .travis.yml  CMakeLists.txt  GNUMakefile  Makefile.am  README.md  mt.c  mtwist.h  mtwist_internal.h  seed.c  test.c
