CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

PROJECT(libmtwist)

SET(LIBMTWIST_SRCS
  mt.c
)

INCLUDE_DIRECTORIES(.)

ADD_DEFINITIONS(-g -O2 -fsigned-char -freg-struct-return -Wall -W -Wshadow -Wstrict-prototypes -Wpointer-arith -Wcast-qual -Winline -Werror)

ADD_LIBRARY(mtwist SHARED ${LIBMTWIST_SRCS})

SET_TARGET_PROPERTIES(mtwist
	PROPERTIES
	VERSION 1.0.0
	SOVERSION 1)

ADD_EXECUTABLE(mttest test.c)

TARGET_LINK_LIBRARIES(mttest mtwist)

INCLUDE (
  ${CMAKE_ROOT}/Modules/CheckIncludeFile.cmake)

CHECK_INCLUDE_FILE(
  "stdlib.h" HAVE_STDLIB_H)
CHECK_INCLUDE_FILE(
  "stdint.h" HAVE_STDINT_H)

IF(HAVE_STDLIB_H)
  ADD_DEFINITIONS(-DHAVE_STDLIB_H)
ENDIF(HAVE_STDLIB_H)
IF(HAVE_STDINT_H)
  ADD_DEFINITIONS(-DHAVE_STDINT_H)
ENDIF(HAVE_STDINT_H)

INSTALL(FILES mtwist.h
        DESTINATION include
	PERMISSIONS OWNER_READ GROUP_READ WORLD_READ)

INSTALL(TARGETS mtwist
        DESTINATION lib
        PERMISSIONS OWNER_READ GROUP_READ WORLD_READ)
