CMAKE_MINIMUM_REQUIRED (VERSION 2.6)

PROJECT (libmtwist)


# CMake includes
INCLUDE (CTest)
INCLUDE (${CMAKE_ROOT}/Modules/CheckIncludeFile.cmake)
INCLUDE (${CMAKE_ROOT}/Modules/CheckCCompilerFlag.cmake)


# Compile include dirs and CPP definitions
INCLUDE_DIRECTORIES ( "${PROJECT_SOURCE_DIR}" )

IF (CMAKE_BUILD_TOOL MATCHES "(msdev|devenv|nmake)")
    ADD_DEFINITIONS(/W2)
ENDIF ()

IF (CMAKE_COMPILER_IS_GNUCC OR CMAKE_COMPILER_IS_GNUCXX)
  ADD_DEFINITIONS (-Wall -W -Wshadow -Wstrict-prototypes -Wpointer-arith -Wcast-qual -Winline -Werror)
ENDIF ()

CHECK_INCLUDE_FILE (
  "stdlib.h" HAVE_STDLIB_H)
CHECK_INCLUDE_FILE (
  "stdint.h" HAVE_STDINT_H)

IF (HAVE_STDLIB_H)
  ADD_DEFINITIONS (-DHAVE_STDLIB_H)
ENDIF ()

IF (HAVE_STDINT_H)
  ADD_DEFINITIONS (-DHAVE_STDINT_H)
ENDIF ()


# Targets
SET (LIBMTWIST_SRCS
  mt.c
)

ADD_LIBRARY ( mtwist SHARED ${LIBMTWIST_SRCS} )

SET_TARGET_PROPERTIES (mtwist
	PROPERTIES
	VERSION 0.0.0
	SOVERSION 0)


# Testing
IF (BUILD_TESTING)
  ADD_EXECUTABLE (mttest test.c)

  TARGET_LINK_LIBRARIES (mttest mtwist)
ENDIF ()

ADD_TEST (
  NAME mttest1
  COMMAND  mttest)

SET_TESTS_PROPERTIES (mttest1
  PROPERTIES PASS_REGULAR_EXPRESSION "Returned 0 failures")


# Installing
INSTALL (FILES mtwist.h
         DESTINATION include
	 PERMISSIONS OWNER_READ GROUP_READ WORLD_READ)

INSTALL (TARGETS mtwist
         DESTINATION lib
         PERMISSIONS OWNER_READ GROUP_READ WORLD_READ)


# Packaging
# Nothing yet
